service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: helloworld
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31000
      targetPort: 3000
  selector:
    app: node-app
